# quant-allocator

./: .gitignore  AGENTS.md  LICENSE  README.md  design-qa.md  pyproject.toml
.github/workflows/: pages.yml
.harness/: README.md  current.yaml
docs/: EDITORIAL_SYSTEM.md  PRODUCT.md  PUBLISHING.md
docs/audits/: 2026-07-15-reader-journey-audit.md
docs/briefs/: sweep-a-brief.md  sweep-b-brief.md  sweep-c-brief.md  sweep-d-brief.md  sweep-e-brief.md
docs/ideas/: 2026-07-05-convergence-decision.md  2026-07-05-idea-cards.md
site/: cards.yaml
site/assets/: design-tokens.css  e2-pack.js  e3-knowledge.js  e4-operational-evidence-change.js  gallery.css  gallery.js  interval.css  interval.js  m1-drift.js  m2-convexity.js  m3-alarms.js  m4-crowding.js  m5-saydo.js  p1-allocation.js  p2-xray.js  p3-hirefire.js  s1-ledger.js  s2-tearsheet.js  s3-lab.js  s4-sell.js  s5-shortbook.js  s6-signatures.js  s7-provenance.css  s7-provenance.js  x1-atlas.js  x2-playground.js  x3-universe.js
site/data/: e2_pack.json  e3_knowledge.json  e4_operational_change.json  m1_drift.json  m2_convexity.json  m3_alarms.json  m4_crowding.json  m5_saydo.json  m6_holdings.json  p1_allocation.json  p2_xray.json  p3_hirefire.json  powergate_registry.json  s1_ledger.json  s2_tearsheet.json  s3_lab.json  s4_sell.json  s5_shortbook.json  s6_signatures.json  s7_provenance.json  x1_atlas.json  x2_playground.json  x3_universe.json
site/templates/: base.html.j2  demo.html.j2  exhibits.html.j2  index.html.j2  (+1 more)
tests/: test_package.py
tools/: publication_check.sh  publication_history_grandfather.yaml
(+400 files in other folders)
